--- a/generators/app/templates/base/package.json
+++ b/generators/app/templates/base/package.json
@@ -1,6 +1,6 @@
 {
   "name": "<%= plugin_name %>",
-  "version": "1.0.0",
+  "version": "<%= version %>",
   "description": "<%= plugin_description %>",
   "repository": {
     "type": "git",
