--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chalk": "^1.1.3",
     "git-origin-url": "^0.3.0",
     "lodash": "^4.17.2",
+    "pluralize": "^3.1.0",
     "yeoman-generator": "^0.24.1"
   }
 }
