--- a/package.json
+++ b/package.json
@@ -3,17 +3,33 @@
   "version": "0.0.1",
   "description": "Generates a WP Plugin shaped for log OSCON workflow",
   "main": "index.js",
-  "author": {
-    "name": "log OSCON",
-    "email": "engenharia@log.pt",
-    "url": "https://github.com/log-oscon/generator-log-wp-plugin"
-  },
-  "license": "GPLv2",
+  "author": "log OSCON <engenharia@log.pt> (https://github.com/log-oscon/generator-log-wp-plugin)",
+  "license": "GPL-2.0",
   "dependencies": {
     "chalk": "^1.1.3",
     "git-origin-url": "^0.3.0",
     "lodash": "^4.17.2",
     "pluralize": "^3.1.0",
     "yeoman-generator": "^0.24.1"
-  }
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/log-oscon/generator-log-wp-plugin.git"
+  },
+  "keywords": [
+    "yeoman",
+    "generator",
+    "wordpress",
+    "wp",
+    "log",
+    "plugin"
+  ],
+  "bugs": {
+    "url": "https://github.com/log-oscon/generator-log-wp-plugin/issues"
+  },
+  "homepage": "https://github.com/log-oscon/generator-log-wp-plugin#readme"
 }
