--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "generator-log-wp-plugin",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Generates a WP Plugin shaped for log OSCON workflow",
   "main": "index.js",
   "author": "log OSCON <engenharia@log.pt> (https://github.com/log-oscon/generator-log-wp-plugin)",
   "license": "GPL-2.0",
   "dependencies": {
     "chalk": "^1.1.3",
+    "findup": "^0.1.5",
     "git-origin-url": "^0.3.0",
     "lodash": "^4.17.2",
     "pluralize": "^3.1.0",
