--- a/generators/app/templates/base/package.json
+++ b/generators/app/templates/base/package.json
@@ -6,8 +6,24 @@
     "type": "git",
     "url": "<%= plugin_url %>"
   },
+  "browserify":{
+    "transform": [
+      "babelify"
+    ]
+  },
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "babel-core": "^6.9.0",
+    "babel-eslint": "^6.0.4",
+    "babel-plugin-transform-object-assign": "^6.8.0",
+    "babel-plugin-transform-runtime": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-register": "^6.16.3",
+    "babelify": "^7.3.0",
+    "gulp": "^3.9.1",
+    "gulp-phpunit": "^0.14.0",
+    "gulp-sort": "^2.0.0",
+    "gulp-wp-pot": "^1.3.2",
+    "require-dir": "^0.3.0"
   },
   "dependencies": {},
   "scripts": {}
